feat: add cognito authentication with Google OAuth

--- a/src/website/index.html
+++ b/src/website/index.html
@@ -3,27 +3,29 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>My Website</title>
+  <title>Goal Pyramid</title>
   <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-  <!-- Navbar -->
-  <div id="navbar-container"></div>
-  
   <!-- Main Content -->
   <div class="main-content">
     <div class="header">
-      <h1>Welcome to My Website</h1>
-      <p>This is a simple template to get you started</p>
+      <h1>Goal Pyramid</h1>
+      <p>Track your goals one block at a time</p>
     </div>
     
-    <div class="content-section">
-      <h2>Getting Started</h2>
-      <p>Edit this template to build your website. The navbar is loaded from <code>navbar.html</code> and can be customized there.</p>
+    <div class="login-section">
+      <button onclick="auth.login()" class="google-login-btn">
+        Sign in with Google
+      </button>
     </div>
   </div>
 
-  <script src="navbar.js"></script>
+  <script src="config.js"></script>
+  <script src="utils.js"></script>
+  <script src="auth.js"></script>
+  <script src="api-client.js"></script>
+  <script src="profile-api.js"></script>
   <script src="index.js"></script>
 </body>
 </html>
