--- a/src/website/navbar.html
+++ b/src/website/navbar.html
@@ -1,10 +1,11 @@
 <nav class="navbar">
   <div class="navbar-container">
     <div class="navbar-left">
-      <a href="index.html" class="nav-link">Home</a>
-      <a href="#about" class="nav-link">About</a>
-      <a href="#services" class="nav-link">Services</a>
-      <a href="#contact" class="nav-link">Contact</a>
+      <a href="home.html" class="nav-link">Home</a>
+    </div>
+    <div class="navbar-right">
+      <span id="user-display-name" class="user-name">Loading...</span>
+      <button onclick="handleLogout()" class="logout-btn">Logout</button>
     </div>
   </div>
 </nav>
